test/compilable/extra-files/dtoh_imports.d
extern(C++):

public import dtoh_imports2 : MyStdcInt = customInt;

class ImportsC {}

void importFunc() {}
