test/fail_compilation/fail4435.d

interface A
{
    final void fun() {}
}

interface B
{
    final void fun() {}
}

class C : A, B
{
}

void main()
{
    auto c = new C();
    c.fun();
}
